  * more sensors (accelerometer w/Ignacio Rodriguez)
  * read pixels (w/Ignacio Rodriguez)
  * find an approach to cameras and microphone that work on Android
    (w/Sam Parkinson)
  * remove unused do blocks (when associated action is removed)
    (w/Ignacio Rodriguez)
  * clean up palette buttons layout after removing a plugin
    (w/Ignacio Rodriguez)
  * use snap to pixels
  * add images to blocks (w/Ignacio Rodriguez)
  * reorganize palettes and plugins
  * fix positioning problem with palettes due to multiple copies of the
    protoblocks being added to the protoList
  * expand boolean blocks
  * save stacks to personal palette
  * use nop blocks when encountering unknown blocks during load
  * scroll palette buttons with a gesture when there are too many
    (Sam Parkinson)
  * only show save on action blocks
  * only show copy/save menu from top block
  * plugin for RoDi (w/Martin Abente)
  * fixed problem with reloading camera or media block getting double image
  * fix coordinate grids offset due to scaling
  * step-by-step playback mode
  * sometimes scrolling menus does not work (Sam Parkinson)

TODO:
  * save errors
  * display rubrics
  * more efficient until and while?
  * save to javascript
  * RTL support
  * zoom and scroll?
  * use graphical error messages
  * expand blocks horizontally
  * three-arg flow blocks
  * three-arg arg blocks
  * write SVG generator
  * user defined blocks
  * try to detect difference between unknown flow and arg blocks
  * change color of stroke when highlighting blocks

KNOWN BUGS:
  * sample projects cannot be shown on Android
  * don't save full-sized bitmap to session
  * find a scalable approach to drawing on the canvas
  * fix race conditions
  * cannot combine various run modes
  * sometimes loading projects leaves stacks expanded and collapsed at
    the same time.
  * not all blocks highlight when using step-by-step mode
  * clear block does not clear
  * problem with saveName